# advent-of-code

./: .clang-format  .clangd  .gitignore  Makefile  README.md  compile_flags.txt  go.mod  go.sum  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml
aoc/: __main__.py  utils.py
aoc/day_10_cathode_ray_tube/: cpu.py  crt.py  utils.py
aoc/day_10_cathode_ray_tube/solution/: one.py  two.py
aoc/day_11_monkey_in_the_middle/: monkey.py
aoc/day_11_monkey_in_the_middle/solution/: one.py  two.py
aoc/day_12_hill_climbing_algorithm/solution/: one.py  two.py
aoc/day_13_distress_signal/: parser.py  utils.py
aoc/day_13_distress_signal/solution/: one.py  two.py
aoc/day_15_beacon_exclusion_zone/: geometry.py  sensor.py
aoc/day_15_beacon_exclusion_zone/solution/: one.py  two.py
aoc/day_1_calorie_counting/solution/: one.py  two.py
aoc/day_25_full_of_hot_air/: converter.py  parser.py
aoc/day_25_full_of_hot_air/solution/: one.py  two.py
aoc/day_7_no_space_left_on_device/: fs.py
aoc/day_7_no_space_left_on_device/solution/: one.py  two.py
aoc/day_8_treetop_tree_house/: forest.py
aoc/day_9_rope_bridge/: geometry.py  rope.py  solver.py
jogtrot/: __init__.py  go.go  jogtrot.go  jogtrot.hpp  matrix.go
santa/: __main__.py  _commands.py  _defs.py  _initer.py  _langs.py  _solver.py  _tester.py  _typer.py  _utils.py  pyproject.toml
solutions/python/: pyproject.toml
src/_year_2022/: utils.py
tools/: __main__.py  _app.py
tools/templates/: main.cpp  main.go  main.py
workshop/cpp/: compile_flags.txt  test_d01
workshop/go/: go.sum
(+90 files in other folders)
