[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Vladislav Shlenskii <vladislav.shlenskii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pycln = "^2.1.2"
isort = "^5.10.1"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
